# ocw-data-parser

./: .coveragerc  .gitignore  .travis.yml  Pipfile  README.md  RELEASE.rst  course_feature_tags.json  media_extractor.py  ocw_data_parser.py  pull_request_template.md  pylintrc  pyproject.toml  setup.py  test_requirements.txt  utils.py
.github/workflows/: ci.yml
ocw_data_parser/: __init__.py  conftest.py  course_downloader.py  course_downloader_test.py  course_feature_tags.py  markdown_generator.py  ocw_data_parser.py  ocw_data_parser_test.py  static_html_generator.py  test_constants.py  utils.py  utils_test.py
ocw_data_parser/test_json/: courses.json  courses_missing.json  master_json.json
ocw_data_parser/test_json/course_dir/: captions_example.json
ocw_data_parser/test_json/course_dir/course-1/jsons/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  (+509 more)
ocw_data_parser/test_json/course_dir/jsons/: 1.json  101.json  102.json  103.json  104.json  107.json  108.json  109.json  112.json  117.json  118.json  121.json  122.json  123.json  125.json  129.json  131.json  133.json  134.json  136.json  138.json  14.json  141.json  142.json  144.json  145.json  147.json  148.json  149.json  150.json  152.json  153.json  154.json  155.json  156.json  157.json  162.json  163.json  164.json  165.json  (+273 more)
(+101 files in other folders)
