[tool.poetry]
name = "ocw-data-parser"
version = "0.11.0"
description = ""
authors = ["MIT"]

[tool.poetry.dependencies]
python = "^3.8"
moto = "^1.3.16"
pytest-cov = "^2.10.1"
codecov = "^2.1.10"
boto3 = "^1.15.16"
pytest = "^6.1.1"
smart-open = "^3.0.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
